# iot-operations-sdks

./: .env  .gitattributes  .gitignore  README.md  SUPPORT.md
codegen/demo/rust/protocol_compiler_demo/client/: Cargo.toml
codegen/demo/rust/protocol_compiler_demo/client/src/: main.rs
codegen/demo/rust/protocol_compiler_demo/cmd_client/: Cargo.toml
codegen/demo/rust/protocol_compiler_demo/cmd_client/src/: main.rs
codegen/demo/rust/protocol_compiler_demo/cmd_server/: Cargo.toml
codegen/demo/rust/protocol_compiler_demo/cmd_server/src/: main.rs
codegen/demo/rust/protocol_compiler_demo/server/: Cargo.toml
codegen/demo/rust/protocol_compiler_demo/server/src/: main.rs
codegen/demo/rust/protocol_compiler_demo/telem_client/: Cargo.toml
codegen/demo/rust/protocol_compiler_demo/telem_client/src/: main.rs
rust/: Cargo.toml  Makefile  README.md  clippy.toml  release.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/azure_iot_operations_mqtt/: Cargo.toml  README.md
rust/azure_iot_operations_mqtt/examples/: connection_monitor.rs  custom_reconnect_policy.rs  custom_reconnect_policy_sample.rs  manual_ack.rs  manual_ack_sample.rs  monitor_sample.rs  sat_auth.rs  sat_auth_sample.rs  send_receive.rs  simple_sample.rs
rust/azure_iot_operations_mqtt/src/: auth.rs  connection_settings.rs  control_packet.rs  error.rs  interface.rs  interface_mocks.rs  lib.rs  rumqttc_adapter.rs  session.rs  topic.rs
rust/azure_iot_operations_mqtt/src/session/: dispatcher.rs  internal.rs  managed_client.rs  pub_tracker.rs  receiver.rs  reconnect_policy.rs  session.rs  state.rs  wrapper.rs
rust/azure_iot_operations_mqtt/src/session/receiver/: ordered_acker.rs  plenary_ack.rs
rust/azure_iot_operations_mqtt/tests/: mock_example.rs  session_network_tests.rs
rust/azure_iot_operations_protocol/: Cargo.toml  README.md
rust/azure_iot_operations_protocol/examples/: counter_client.rs  counter_server.rs  rpc_executor_sample_no_serialization.rs  rpc_executor_sample_with_shared_subscription.rs  rpc_executors_with_shared_subscription.rs  rpc_invoker_sample_no_serialization.rs  simple_rpc_executor.rs  simple_rpc_executor_sample.rs  simple_rpc_invoker.rs  simple_rpc_invoker_sample.rs  simple_telemetry_receiver.rs  simple_telemetry_receiver_sample.rs  simple_telemetry_sender.rs  simple_telemetry_sender_sample.rs
rust/azure_iot_operations_protocol/src/: application.rs  common.rs  lib.rs  rpc.rs  rpc_command.rs  telemetry.rs
rust/azure_iot_operations_protocol/src/common/: aio_protocol_error.rs  error2.rs  hybrid_logical_clock.rs  payload_serialize.rs  topic_processor.rs  topic_processor2.rs  topic_processor_old.rs  user_properties.rs
rust/azure_iot_operations_protocol/src/rpc/: command_executor.rs  command_invoker.rs  error.rs
rust/azure_iot_operations_protocol/src/rpc_command/: executor.rs  invoker.rs
rust/azure_iot_operations_protocol/src/telemetry/: cloud_event.rs  error.rs  receiver.rs  sender.rs  telemetry_receiver.rs  telemetry_sender.rs
rust/azure_iot_operations_protocol/tests/: command_network_tests.rs  protocol_tests.rs  telemetry_network_tests.rs
rust/azure_iot_operations_protocol/tests/metl/: aio_protocol_error_checker.rs  command_executor_tester.rs  command_invoker_tester.rs  countdown_event_map.rs  default_action.rs  default_executor.rs  default_invoke_command.rs  default_invoker.rs  default_prologue.rs  default_receive_request.rs  default_receive_response.rs  default_receive_telemetry.rs  default_receiver.rs  default_send_telemetry.rs  default_sender.rs  default_serializer.rs  default_test_case.rs  defaults.rs  mod.rs  mqtt_driver.rs  mqtt_emulation_level.rs  mqtt_hub.rs  mqtt_listener.rs  mqtt_looper.rs  mqtt_operation.rs  optional_field.rs  qos.rs  telemetry_error_checker.rs  telemetry_receiver_tester.rs  telemetry_sender_tester.rs  test_ack_kind.rs  test_case.rs  test_case_action.rs  test_case_action_invoke_command.rs  test_case_action_receive_request.rs  test_case_action_receive_response.rs  test_case_action_receive_telemetry.rs  test_case_action_send_telemetry.rs  test_case_catch.rs  test_case_cloud_event.rs  (+18 more)
rust/azure_iot_operations_services/: Cargo.toml  README.md  gen.sh
rust/azure_iot_operations_services/examples/: leased_lock_client.rs  schema_registry_client.rs  state_store_client.rs
rust/azure_iot_operations_services/src/: common.rs  leased_lock.rs  lib.rs  schema_registry.rs  state_store.rs
rust/azure_iot_operations_services/src/leased_lock/: client.rs
rust/azure_iot_operations_services/src/schema_registry/: client.rs
rust/azure_iot_operations_services/src/schema_registry/schemaregistry_gen/: common_types.rs  dependencies.md  dtmi_ms_adr_SchemaRegistry__1.rs  mod.rs  schema_registry.rs
rust/azure_iot_operations_services/src/schema_registry/schemaregistry_gen/common_types/: b64.rs  date_only.rs  (+4 more)
rust/azure_iot_operations_services/src/state_store/: client.rs  resp3.rs
rust/azure_iot_operations_services/tests/: leased_lock_client_tests.rs  state_store_client_test.rs
rust/ci/: build-deps.sh  check.sh  coverage.sh  minimal-deps.sh  test.sh
rust/sample_applications/: README.md
rust/sample_applications/counter/: README.md  gen.sh
rust/sample_applications/counter/counter_client/: Cargo.toml
rust/sample_applications/counter/counter_client/src/: main.rs
rust/sample_applications/counter/counter_server/: Cargo.toml
rust/sample_applications/counter/counter_server/src/: main.rs
rust/sample_applications/counter/envoy/: Cargo.toml
rust/sample_applications/counter/envoy/src/: common_types.rs  counter.rs  dtmi_com_example_Counter__1.rs  lib.rs
rust/sample_applications/event_driven_app/: Dockerfile  README.md  app.yml
rust/sample_applications/event_driven_app/input_client/: Cargo.toml
rust/sample_applications/event_driven_app/input_client/src/: main.rs
rust/sample_applications/event_driven_app/output_client/: Cargo.toml
rust/sample_applications/event_driven_app/output_client/src/: main.rs
tools/statestore-cli/: Cargo.toml  readme-dev.md  readme.md
tools/statestore-cli/src/: main.rs
tools/statestore-cli/test/: test.cmd  test.sh
(+3207 files in other folders)
