# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
members = [
  "azure_iot_operations_mqtt",
  "azure_iot_operations_protocol",
]

resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
module_name_repetitions = "allow"
