# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
members = [
  "azure_iot_operations_mqtt",
  "azure_iot_operations_protocol",
  "azure_iot_operations_services",
  "sample_applications/counter/envoy",
  "sample_applications/counter/counter_client",
  "sample_applications/counter/counter_server",
  "sample_applications/event_driven_app/input_client",
  "sample_applications/event_driven_app/output_client",
]

resolver = "2"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
bytes = "1.5.0"
derive_builder = "0.20"
log = "0.4.21"                                                          # For performance, I believe this should have some filters on it
thiserror = "2.0.12"
tokio = { version = "1.41", features = ["rt", "time", "sync"] }
tokio-util = "0.7.11"
# dev dependencies
env_logger = "0.11.3"
serial_test = "3.2.0"
test-case = "3.3.1"
tokio-test = "0.4.4"
