# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_mqtt"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "MQTT version 5.0 client library providing flexibility for decoupled asynchronous applications"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0.86"                                                                   # TODO: reconsider inclusion once TLS library is finalized
async-trait = "0.1.81"
base64 = "0.21"
bytes = "1.5.0"
derive_builder = "0.20"
log = "0.4.21"                                                                      # For performance, I believe this should have some filters on it
openssl = "0.10.66"                                                                 # only used with rumqttc to set up TLS settings
rand = "0.8.5"
rustls-native-certs = "0.7.3"                                                       # only used with rumqttc to set up TLS as a short term workaround
rustls-pemfile = "2.1.3"                                                            # only used with rumqttc to set up TLS as a short term workaround
rumqttc = { git = "https://github.com/xiaocq2001/rumqtt.git", branch = "all_test", features = ["use-rustls"] }
serde_json = "1"
thiserror = "1.0.63"
tokio = { version = "1.36", features = ["full"] }                                   # TODO: Remove full
tokio-util = "0.7.11"

[dev-dependencies]
env_logger = "0.11.3"
flume = { version = "0.11", default-features = false, features = ["async"] }
test-case = "3.3.1"
tokio-test = "0.4.4"

[lints]
workspace = true
