# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_mqtt"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "MQTT version 5.0 client library providing flexibility for decoupled asynchronous applications"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
anyhow = "1.0.86"                                                                   # TODO: reconsider inclusion once TLS library is finalized
async-trait = "0.1.81"
base64 = "0.21"
bytes.workspace = true
derive_builder.workspace = true
log.workspace = true
openssl = "0.10.66"                                                                 # only used with rumqttc to set up TLS settings
rand = "0.8.5"
rumqttc = { version = "0.24.0-fork.2", registry = 'aio-sdks', features = ["use-native-tls"] }
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
env_logger.workspace = true
flume = { version = "0.11", default-features = false, features = ["async"] }
test-case.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
