# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_protocol"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Utilities for using the Azure IoT Operations Protocol over MQTT"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
azure_iot_operations_mqtt = { version = "0.6", path = "../azure_iot_operations_mqtt", registry = "aio-sdks" }
bytes.workspace = true
derive_builder.workspace = true
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4"
regex = "1.11.0"

[dev-dependencies]
env_logger.workspace = true
mockall = "0.12.1"
test-case.workspace = true
tokio-test.workspace = true
thiserror.workspace = true 

[lints]
workspace = true
