# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_services"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Azure IoT Operations Services"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
azure_iot_operations_protocol = { version = "0.4", path = "../azure_iot_operations_protocol", registry = "aio-sdks"  }
azure_iot_operations_mqtt = { version = "0.4", path = "../azure_iot_operations_mqtt", registry = "aio-sdks"  }
derive_builder.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-case.workspace = true

[lints]
workspace = true
