[package]
name = "counter_client"
version = "0.1.0"
edition = "2024"

[dependencies]
envoy = { path = "../envoy"}
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
azure_iot_operations_mqtt = { path = "../../../azure_iot_operations_mqtt", registry = "aio-sdks" }
azure_iot_operations_protocol = { path = "../../../azure_iot_operations_protocol", registry = "aio-sdks" }

[lints]
workspace = true
